@@ -1,3 +1,7 @@
+22-04-2003 :
+ - wxbRestorePanel : improved restore appearance
+ - wxbRestorePanel : configure is allowed to change client
+
 19-04-2004 :
  - wxbRestorePanel : Locked configure items until first 
    configuration is received
